k8s/domains/plans/components/accounts-projector/infra/base/accounts-projector-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: accounts-projector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-projector
  template:
    metadata:
      labels:
        app: accounts-projector
    spec:
      terminationGracePeriodSeconds: 15
      automountServiceAccountToken: false

      containers:
        - name: accounts-projector
          image: ghcr.io/mstaicu/plans-accounts-projector
          ports:
            - name: health
              containerPort: 3000

          readinessProbe:
            httpGet:
              path: /readyz
              port: health
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 2

          livenessProbe:
            httpGet:
              path: /livez
              port: health
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 2
